tests/suite/snapshots/suite__case_f3cp.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 3
    line: 0
    column: 3
- token: Break
  start:
    index: 3
    line: 0
    column: 3
  end:
    index: 5
    line: 1
    column: 0
- token: Indent
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 5
    line: 1
    column: 0
- token: MappingStart
  start:
    index: 5
    line: 1
    column: 0
  end:
    index: 6
    line: 1
    column: 1
- token: Separator
  start:
    index: 6
    line: 1
    column: 1
  end:
    index: 7
    line: 1
    column: 2
- token: Scalar
  start:
    index: 7
    line: 1
    column: 2
  end:
    index: 8
    line: 1
    column: 3
- token: MappingValue
  start:
    index: 8
    line: 1
    column: 3
  end:
    index: 9
    line: 1
    column: 4
- token: Separator
  start:
    index: 9
    line: 1
    column: 4
  end:
    index: 10
    line: 1
    column: 5
- token: SequenceStart
  start:
    index: 10
    line: 1
    column: 5
  end:
    index: 11
    line: 1
    column: 6
- token: Scalar
  start:
    index: 11
    line: 1
    column: 6
  end:
    index: 12
    line: 1
    column: 7
- token: CollectionEntry
  start:
    index: 12
    line: 1
    column: 7
  end:
    index: 13
    line: 1
    column: 8
- token: Separator
  start:
    index: 13
    line: 1
    column: 8
  end:
    index: 14
    line: 1
    column: 9
- token: Scalar
  start:
    index: 14
    line: 1
    column: 9
  end:
    index: 15
    line: 1
    column: 10
- token: CollectionEntry
  start:
    index: 15
    line: 1
    column: 10
  end:
    index: 16
    line: 1
    column: 11
- token: Separator
  start:
    index: 16
    line: 1
    column: 11
  end:
    index: 17
    line: 1
    column: 12
- token: MappingStart
  start:
    index: 17
    line: 1
    column: 12
  end:
    index: 18
    line: 1
    column: 13
- token: Separator
  start:
    index: 18
    line: 1
    column: 13
  end:
    index: 19
    line: 1
    column: 14
- token: Scalar
  start:
    index: 19
    line: 1
    column: 14
  end:
    index: 20
    line: 1
    column: 15
- token: MappingValue
  start:
    index: 20
    line: 1
    column: 15
  end:
    index: 21
    line: 1
    column: 16
- token: Separator
  start:
    index: 21
    line: 1
    column: 16
  end:
    index: 22
    line: 1
    column: 17
- token: SequenceStart
  start:
    index: 22
    line: 1
    column: 17
  end:
    index: 23
    line: 1
    column: 18
- token: Scalar
  start:
    index: 23
    line: 1
    column: 18
  end:
    index: 24
    line: 1
    column: 19
- token: CollectionEntry
  start:
    index: 24
    line: 1
    column: 19
  end:
    index: 25
    line: 1
    column: 20
- token: Separator
  start:
    index: 25
    line: 1
    column: 20
  end:
    index: 26
    line: 1
    column: 21
- token: Scalar
  start:
    index: 26
    line: 1
    column: 21
  end:
    index: 27
    line: 1
    column: 22
- token: SequenceEnd
  start:
    index: 27
    line: 1
    column: 22
  end:
    index: 28
    line: 1
    column: 23
- token: Separator
  start:
    index: 28
    line: 1
    column: 23
  end:
    index: 29
    line: 1
    column: 24
- token: MappingEnd
  start:
    index: 29
    line: 1
    column: 24
  end:
    index: 30
    line: 1
    column: 25
- token: Separator
  start:
    index: 30
    line: 1
    column: 25
  end:
    index: 31
    line: 1
    column: 26
- token: SequenceEnd
  start:
    index: 31
    line: 1
    column: 26
  end:
    index: 32
    line: 1
    column: 27
- token: Separator
  start:
    index: 32
    line: 1
    column: 27
  end:
    index: 33
    line: 1
    column: 28
- token: MappingEnd
  start:
    index: 33
    line: 1
    column: 28
  end:
    index: 34
    line: 1
    column: 29
- token: Break
  start:
    index: 34
    line: 1
    column: 29
  end:
    index: 36
    line: 2
    column: 0

