tests/suite/snapshots/suite__case_f6mc.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: DirectivesEnd
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 3
- token: Break
  start:
    line: 0
    column: 3
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: MappingValue
  start:
    line: 1
    column: 1
  end:
    line: 1
    column: 2
- token: Separator
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Folded
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: IndentationIndicator
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 5
- token: Break
  start:
    line: 1
    column: 5
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: Scalar
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 16
- token: ScalarBreak
  start:
    line: 2
    column: 16
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 9
- token: ScalarBreak
  start:
    line: 3
    column: 9
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: Scalar
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: MappingValue
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: Separator
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 3
- token: Folded
  start:
    line: 4
    column: 3
  end:
    line: 4
    column: 4
- token: IndentationIndicator
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 5
- token: Break
  start:
    line: 4
    column: 5
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: ScalarBreak
  start:
    line: 5
    column: 0
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: ScalarBreak
  start:
    line: 6
    column: 0
  end:
    line: 7
    column: 0
- token: Indent
  start:
    line: 7
    column: 0
  end:
    line: 7
    column: 2
- token: Scalar
  start:
    line: 7
    column: 2
  end:
    line: 7
    column: 16
- token: ScalarBreak
  start:
    line: 7
    column: 16
  end:
    line: 8
    column: 0
- token: Indent
  start:
    line: 8
    column: 0
  end:
    line: 8
    column: 2
- token: Scalar
  start:
    line: 8
    column: 2
  end:
    line: 8
    column: 9
- token: ScalarBreak
  start:
    line: 8
    column: 9
  end:
    line: 9
    column: 0

