tests/suite/snapshots/suite__case_f8f9.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Separator
  start:
    index: 0
    line: 0
    column: 0
  end:
    index: 1
    line: 0
    column: 1
- token: Comment
  start:
    index: 1
    line: 0
    column: 1
  end:
    index: 2
    line: 0
    column: 2
- token: CommentText
  start:
    index: 2
    line: 0
    column: 2
  end:
    index: 8
    line: 0
    column: 8
- token: Break
  start:
    index: 8
    line: 0
    column: 8
  end:
    index: 10
    line: 1
    column: 0
- token: Separator
  start:
    index: 10
    line: 1
    column: 0
  end:
    index: 12
    line: 1
    column: 2
- token: Comment
  start:
    index: 12
    line: 1
    column: 2
  end:
    index: 13
    line: 1
    column: 3
- token: CommentText
  start:
    index: 13
    line: 1
    column: 3
  end:
    index: 23
    line: 1
    column: 13
- token: Break
  start:
    index: 23
    line: 1
    column: 13
  end:
    index: 25
    line: 2
    column: 0
- token: Indent
  start:
    index: 25
    line: 2
    column: 0
  end:
    index: 25
    line: 2
    column: 0
- token: Scalar
  start:
    index: 25
    line: 2
    column: 0
  end:
    index: 30
    line: 2
    column: 5
- token: MappingValue
  start:
    index: 30
    line: 2
    column: 5
  end:
    index: 31
    line: 2
    column: 6
- token: Separator
  start:
    index: 31
    line: 2
    column: 6
  end:
    index: 32
    line: 2
    column: 7
- token: Literal
  start:
    index: 32
    line: 2
    column: 7
  end:
    index: 33
    line: 2
    column: 8
- token: ChompingIndicator
  start:
    index: 33
    line: 2
    column: 8
  end:
    index: 34
    line: 2
    column: 9
- token: Break
  start:
    index: 34
    line: 2
    column: 9
  end:
    index: 36
    line: 3
    column: 0
- token: Indent
  start:
    index: 36
    line: 3
    column: 0
  end:
    index: 38
    line: 3
    column: 2
- token: Scalar
  start:
    index: 38
    line: 3
    column: 2
  end:
    index: 44
    line: 3
    column: 8
- token: Break
  start:
    index: 44
    line: 3
    column: 8
  end:
    index: 46
    line: 4
    column: 0
- token: Indent
  start:
    index: 46
    line: 4
    column: 0
  end:
    index: 48
    line: 4
    column: 2
- token: Break
  start:
    index: 48
    line: 4
    column: 2
  end:
    index: 50
    line: 5
    column: 0
- token: Indent
  start:
    index: 50
    line: 5
    column: 0
  end:
    index: 51
    line: 5
    column: 1
- token: Comment
  start:
    index: 51
    line: 5
    column: 1
  end:
    index: 52
    line: 5
    column: 2
- token: CommentText
  start:
    index: 52
    line: 5
    column: 2
  end:
    index: 57
    line: 5
    column: 7
- token: Break
  start:
    index: 57
    line: 5
    column: 7
  end:
    index: 59
    line: 6
    column: 0
- token: Separator
  start:
    index: 59
    line: 6
    column: 0
  end:
    index: 61
    line: 6
    column: 2
- token: Comment
  start:
    index: 61
    line: 6
    column: 2
  end:
    index: 62
    line: 6
    column: 3
- token: CommentText
  start:
    index: 62
    line: 6
    column: 3
  end:
    index: 72
    line: 6
    column: 13
- token: Break
  start:
    index: 72
    line: 6
    column: 13
  end:
    index: 76
    line: 8
    column: 0
- token: Indent
  start:
    index: 76
    line: 8
    column: 0
  end:
    index: 76
    line: 8
    column: 0
- token: Scalar
  start:
    index: 76
    line: 8
    column: 0
  end:
    index: 80
    line: 8
    column: 4
- token: MappingValue
  start:
    index: 80
    line: 8
    column: 4
  end:
    index: 81
    line: 8
    column: 5
- token: Separator
  start:
    index: 81
    line: 8
    column: 5
  end:
    index: 82
    line: 8
    column: 6
- token: Literal
  start:
    index: 82
    line: 8
    column: 6
  end:
    index: 83
    line: 8
    column: 7
- token: Break
  start:
    index: 83
    line: 8
    column: 7
  end:
    index: 85
    line: 9
    column: 0
- token: Indent
  start:
    index: 85
    line: 9
    column: 0
  end:
    index: 87
    line: 9
    column: 2
- token: Scalar
  start:
    index: 87
    line: 9
    column: 2
  end:
    index: 93
    line: 9
    column: 8
- token: ScalarBreak
  start:
    index: 93
    line: 9
    column: 8
  end:
    index: 95
    line: 10
    column: 0
- token: Indent
  start:
    index: 95
    line: 10
    column: 0
  end:
    index: 96
    line: 10
    column: 1
- token: Break
  start:
    index: 96
    line: 10
    column: 1
  end:
    index: 98
    line: 11
    column: 0
- token: Indent
  start:
    index: 98
    line: 11
    column: 0
  end:
    index: 99
    line: 11
    column: 1
- token: Comment
  start:
    index: 99
    line: 11
    column: 1
  end:
    index: 100
    line: 11
    column: 2
- token: CommentText
  start:
    index: 100
    line: 11
    column: 2
  end:
    index: 105
    line: 11
    column: 7
- token: Break
  start:
    index: 105
    line: 11
    column: 7
  end:
    index: 107
    line: 12
    column: 0
- token: Separator
  start:
    index: 107
    line: 12
    column: 0
  end:
    index: 109
    line: 12
    column: 2
- token: Comment
  start:
    index: 109
    line: 12
    column: 2
  end:
    index: 110
    line: 12
    column: 3
- token: CommentText
  start:
    index: 110
    line: 12
    column: 3
  end:
    index: 120
    line: 12
    column: 13
- token: Break
  start:
    index: 120
    line: 12
    column: 13
  end:
    index: 124
    line: 14
    column: 0
- token: Indent
  start:
    index: 124
    line: 14
    column: 0
  end:
    index: 124
    line: 14
    column: 0
- token: Scalar
  start:
    index: 124
    line: 14
    column: 0
  end:
    index: 128
    line: 14
    column: 4
- token: MappingValue
  start:
    index: 128
    line: 14
    column: 4
  end:
    index: 129
    line: 14
    column: 5
- token: Separator
  start:
    index: 129
    line: 14
    column: 5
  end:
    index: 130
    line: 14
    column: 6
- token: Literal
  start:
    index: 130
    line: 14
    column: 6
  end:
    index: 131
    line: 14
    column: 7
- token: ChompingIndicator
  start:
    index: 131
    line: 14
    column: 7
  end:
    index: 132
    line: 14
    column: 8
- token: Break
  start:
    index: 132
    line: 14
    column: 8
  end:
    index: 134
    line: 15
    column: 0
- token: Indent
  start:
    index: 134
    line: 15
    column: 0
  end:
    index: 136
    line: 15
    column: 2
- token: Scalar
  start:
    index: 136
    line: 15
    column: 2
  end:
    index: 142
    line: 15
    column: 8
- token: ScalarBreak
  start:
    index: 142
    line: 15
    column: 8
  end:
    index: 144
    line: 16
    column: 0
- token: Indent
  start:
    index: 144
    line: 16
    column: 0
  end:
    index: 144
    line: 16
    column: 0
- token: ScalarBreak
  start:
    index: 144
    line: 16
    column: 0
  end:
    index: 146
    line: 17
    column: 0
- token: Indent
  start:
    index: 146
    line: 17
    column: 0
  end:
    index: 147
    line: 17
    column: 1
- token: Comment
  start:
    index: 147
    line: 17
    column: 1
  end:
    index: 148
    line: 17
    column: 2
- token: CommentText
  start:
    index: 148
    line: 17
    column: 2
  end:
    index: 154
    line: 17
    column: 8
- token: Break
  start:
    index: 154
    line: 17
    column: 8
  end:
    index: 156
    line: 18
    column: 0
- token: Separator
  start:
    index: 156
    line: 18
    column: 0
  end:
    index: 158
    line: 18
    column: 2
- token: Comment
  start:
    index: 158
    line: 18
    column: 2
  end:
    index: 159
    line: 18
    column: 3
- token: CommentText
  start:
    index: 159
    line: 18
    column: 3
  end:
    index: 169
    line: 18
    column: 13
- token: Break
  start:
    index: 169
    line: 18
    column: 13
  end:
    index: 171
    line: 19
    column: 0

