tests/suite/snapshots/suite__case_fh7j.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: SequenceEntry
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Separator
  start:
    line: 0
    column: 1
  end:
    line: 0
    column: 2
- token: TagHandle
  start:
    line: 0
    column: 2
  end:
    line: 0
    column: 4
- token: TagSuffix
  start:
    line: 0
    column: 4
  end:
    line: 0
    column: 7
- token: Empty
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 7
- token: Break
  start:
    line: 0
    column: 7
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: SequenceEntry
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 1
- token: Break
  start:
    line: 1
    column: 1
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: TagHandle
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 4
- token: TagSuffix
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 8
- token: Empty
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 8
- token: Separator
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 9
- token: MappingValue
  start:
    line: 2
    column: 9
  end:
    line: 2
    column: 10
- token: Separator
  start:
    line: 2
    column: 10
  end:
    line: 2
    column: 11
- token: Scalar
  start:
    line: 2
    column: 11
  end:
    line: 2
    column: 12
- token: Break
  start:
    line: 2
    column: 12
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 2
- token: Scalar
  start:
    line: 3
    column: 2
  end:
    line: 3
    column: 3
- token: MappingValue
  start:
    line: 3
    column: 3
  end:
    line: 3
    column: 4
- token: Separator
  start:
    line: 3
    column: 4
  end:
    line: 3
    column: 5
- token: TagHandle
  start:
    line: 3
    column: 5
  end:
    line: 3
    column: 7
- token: TagSuffix
  start:
    line: 3
    column: 7
  end:
    line: 3
    column: 10
- token: Empty
  start:
    line: 3
    column: 10
  end:
    line: 3
    column: 10
- token: Break
  start:
    line: 3
    column: 10
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: SequenceEntry
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 1
- token: Indent
  start:
    line: 4
    column: 1
  end:
    line: 4
    column: 2
- token: TagHandle
  start:
    line: 4
    column: 2
  end:
    line: 4
    column: 4
- token: TagSuffix
  start:
    line: 4
    column: 4
  end:
    line: 4
    column: 7
- token: Empty
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 7
- token: Separator
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 8
- token: MappingValue
  start:
    line: 4
    column: 8
  end:
    line: 4
    column: 9
- token: Separator
  start:
    line: 4
    column: 9
  end:
    line: 4
    column: 10
- token: TagHandle
  start:
    line: 4
    column: 10
  end:
    line: 4
    column: 12
- token: TagSuffix
  start:
    line: 4
    column: 12
  end:
    line: 4
    column: 16
- token: Empty
  start:
    line: 4
    column: 16
  end:
    line: 4
    column: 16
- token: Break
  start:
    line: 4
    column: 16
  end:
    line: 5
    column: 0

