tests/suite/snapshots/suite__case_frk4.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: MappingStart
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 1
- token: Break
  start:
    line: 0
    column: 1
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Separator
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 2
- token: MappingKey
  start:
    line: 1
    column: 2
  end:
    line: 1
    column: 3
- token: Separator
  start:
    line: 1
    column: 3
  end:
    line: 1
    column: 4
- token: Scalar
  start:
    line: 1
    column: 4
  end:
    line: 1
    column: 7
- token: Separator
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 8
- token: MappingValue
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 9
- token: Empty
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 9
- token: CollectionEntry
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 10
- token: Break
  start:
    line: 1
    column: 10
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Separator
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 2
- token: Empty
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 2
- token: MappingValue
  start:
    line: 2
    column: 2
  end:
    line: 2
    column: 3
- token: Separator
  start:
    line: 2
    column: 3
  end:
    line: 2
    column: 4
- token: Scalar
  start:
    line: 2
    column: 4
  end:
    line: 2
    column: 7
- token: CollectionEntry
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: Break
  start:
    line: 2
    column: 8
  end:
    line: 3
    column: 0
- token: Indent
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 0
- token: MappingEnd
  start:
    line: 3
    column: 0
  end:
    line: 3
    column: 1
- token: Break
  start:
    line: 3
    column: 1
  end:
    line: 4
    column: 0

