tests/suite/snapshots/suite__case_g4rs.snap
---
source: tests/suite/cases.gen.rs
expression: tokens
---
- token: Indent
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 0
- token: Scalar
  start:
    line: 0
    column: 0
  end:
    line: 0
    column: 7
- token: MappingValue
  start:
    line: 0
    column: 7
  end:
    line: 0
    column: 8
- token: Separator
  start:
    line: 0
    column: 8
  end:
    line: 0
    column: 9
- token: DoubleQuote
  start:
    line: 0
    column: 9
  end:
    line: 0
    column: 10
- token: DoubleQuoted
  start:
    line: 0
    column: 10
  end:
    line: 0
    column: 24
- token: Escape
  start:
    line: 0
    column: 24
  end:
    line: 0
    column: 25
- token: EscapeCode
  start:
    line: 0
    column: 25
  end:
    line: 0
    column: 30
- token: DoubleQuoted
  start:
    line: 0
    column: 30
  end:
    line: 0
    column: 30
- token: DoubleQuote
  start:
    line: 0
    column: 30
  end:
    line: 0
    column: 31
- token: Break
  start:
    line: 0
    column: 31
  end:
    line: 1
    column: 0
- token: Indent
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 0
- token: Scalar
  start:
    line: 1
    column: 0
  end:
    line: 1
    column: 7
- token: MappingValue
  start:
    line: 1
    column: 7
  end:
    line: 1
    column: 8
- token: Separator
  start:
    line: 1
    column: 8
  end:
    line: 1
    column: 9
- token: DoubleQuote
  start:
    line: 1
    column: 9
  end:
    line: 1
    column: 10
- token: DoubleQuoted
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 10
- token: Escape
  start:
    line: 1
    column: 10
  end:
    line: 1
    column: 11
- token: EscapeCode
  start:
    line: 1
    column: 11
  end:
    line: 1
    column: 12
- token: DoubleQuoted
  start:
    line: 1
    column: 12
  end:
    line: 1
    column: 16
- token: Escape
  start:
    line: 1
    column: 16
  end:
    line: 1
    column: 17
- token: EscapeCode
  start:
    line: 1
    column: 17
  end:
    line: 1
    column: 18
- token: DoubleQuoted
  start:
    line: 1
    column: 18
  end:
    line: 1
    column: 22
- token: Escape
  start:
    line: 1
    column: 22
  end:
    line: 1
    column: 23
- token: EscapeCode
  start:
    line: 1
    column: 23
  end:
    line: 1
    column: 24
- token: DoubleQuoted
  start:
    line: 1
    column: 24
  end:
    line: 1
    column: 28
- token: Escape
  start:
    line: 1
    column: 28
  end:
    line: 1
    column: 29
- token: EscapeCode
  start:
    line: 1
    column: 29
  end:
    line: 1
    column: 30
- token: DoubleQuoted
  start:
    line: 1
    column: 30
  end:
    line: 1
    column: 30
- token: DoubleQuote
  start:
    line: 1
    column: 30
  end:
    line: 1
    column: 31
- token: Break
  start:
    line: 1
    column: 31
  end:
    line: 2
    column: 0
- token: Indent
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 0
- token: Scalar
  start:
    line: 2
    column: 0
  end:
    line: 2
    column: 7
- token: MappingValue
  start:
    line: 2
    column: 7
  end:
    line: 2
    column: 8
- token: Separator
  start:
    line: 2
    column: 8
  end:
    line: 2
    column: 9
- token: DoubleQuote
  start:
    line: 2
    column: 9
  end:
    line: 2
    column: 10
- token: DoubleQuoted
  start:
    line: 2
    column: 10
  end:
    line: 2
    column: 10
- token: Escape
  start:
    line: 2
    column: 10
  end:
    line: 2
    column: 11
- token: EscapeCode
  start:
    line: 2
    column: 11
  end:
    line: 2
    column: 14
- token: DoubleQuoted
  start:
    line: 2
    column: 14
  end:
    line: 2
    column: 14
- token: Escape
  start:
    line: 2
    column: 14
  end:
    line: 2
    column: 15
- token: EscapeCode
  start:
    line: 2
    column: 15
  end:
    line: 2
    column: 18
- token: DoubleQuoted
  start:
    line: 2
    column: 18
  end:
    line: 2
    column: 22
- token: Escape
  start:
    line: 2
    column: 22
  end:
    line: 2
    column: 23
- token: EscapeCode
  start:
    line: 2
    column: 23
  end:
    line: 2
    column: 24
- token: DoubleQuoted
  start:
    line: 2
    column: 24
  end:
    line: 2
    column: 24
- token: Escape
  start:
    line: 2
    column: 24
  end:
    line: 2
    column: 25
- token: EscapeCode
  start:
    line: 2
    column: 25
  end:
    line: 2
    column: 26
- token: DoubleQuoted
  start:
    line: 2
    column: 26
  end:
    line: 2
    column: 26
- token: DoubleQuote
  start:
    line: 2
    column: 26
  end:
    line: 2
    column: 27
- token: Break
  start:
    line: 2
    column: 27
  end:
    line: 4
    column: 0
- token: Indent
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 0
- token: Scalar
  start:
    line: 4
    column: 0
  end:
    line: 4
    column: 6
- token: MappingValue
  start:
    line: 4
    column: 6
  end:
    line: 4
    column: 7
- token: Separator
  start:
    line: 4
    column: 7
  end:
    line: 4
    column: 8
- token: SingleQuote
  start:
    line: 4
    column: 8
  end:
    line: 4
    column: 9
- token: SingleQuoted
  start:
    line: 4
    column: 9
  end:
    line: 4
    column: 27
- token: SingleQuote
  start:
    line: 4
    column: 27
  end:
    line: 4
    column: 28
- token: Break
  start:
    line: 4
    column: 28
  end:
    line: 5
    column: 0
- token: Indent
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 0
- token: Scalar
  start:
    line: 5
    column: 0
  end:
    line: 5
    column: 6
- token: MappingValue
  start:
    line: 5
    column: 6
  end:
    line: 5
    column: 7
- token: Separator
  start:
    line: 5
    column: 7
  end:
    line: 5
    column: 8
- token: SingleQuote
  start:
    line: 5
    column: 8
  end:
    line: 5
    column: 9
- token: SingleQuoted
  start:
    line: 5
    column: 9
  end:
    line: 5
    column: 18
- token: QuotedQuote
  start:
    line: 5
    column: 18
  end:
    line: 5
    column: 20
- token: SingleQuoted
  start:
    line: 5
    column: 20
  end:
    line: 5
    column: 27
- token: QuotedQuote
  start:
    line: 5
    column: 27
  end:
    line: 5
    column: 29
- token: SingleQuoted
  start:
    line: 5
    column: 29
  end:
    line: 5
    column: 30
- token: SingleQuote
  start:
    line: 5
    column: 30
  end:
    line: 5
    column: 31
- token: Break
  start:
    line: 5
    column: 31
  end:
    line: 6
    column: 0
- token: Indent
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 0
- token: Scalar
  start:
    line: 6
    column: 0
  end:
    line: 6
    column: 11
- token: MappingValue
  start:
    line: 6
    column: 11
  end:
    line: 6
    column: 12
- token: Separator
  start:
    line: 6
    column: 12
  end:
    line: 6
    column: 13
- token: SingleQuote
  start:
    line: 6
    column: 13
  end:
    line: 6
    column: 14
- token: SingleQuoted
  start:
    line: 6
    column: 14
  end:
    line: 6
    column: 21
- token: SingleQuote
  start:
    line: 6
    column: 21
  end:
    line: 6
    column: 22
- token: Break
  start:
    line: 6
    column: 22
  end:
    line: 7
    column: 0

